# hexstrike-ai

./: README.md
.github/workflows/: android-build.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hexstrike/ai/: HexStrikeApplication.kt  MainActivity.kt
android/app/src/main/java/com/hexstrike/ai/data/agent/: AgentEvent.kt  AgentOrchestrator.kt  PromptToolCallParser.kt  SystemPrompt.kt
android/app/src/main/java/com/hexstrike/ai/data/db/: ChatDao.kt  ChatEntities.kt  ChatHistoryRepository.kt  ChatMapping.kt  HexStrikeDatabase.kt
android/app/src/main/java/com/hexstrike/ai/data/linux/: LinuxEnvironmentPaths.kt  LinuxEnvironmentRepository.kt  LinuxEnvironmentState.kt  LinuxInteractiveSession.kt  LinuxSessionService.kt  LinuxShell.kt  ProotManager.kt  RootfsDownloader.kt
android/app/src/main/java/com/hexstrike/ai/data/settings/: AppSettings.kt  SettingsRepository.kt
android/app/src/main/java/com/hexstrike/ai/data/tools/: BinaryForensicsTools.kt  CloudTools.kt  ExploitationTools.kt  NetworkTools.kt  OsintTools.kt  PasswordAuthTools.kt  SecurityToolRegistry.kt  ToolExecutor.kt  ToolInstaller.kt  ToolTypes.kt  WebAppTools.kt
android/app/src/main/java/com/hexstrike/ai/data/venice/: ChatStreamAccumulator.kt  VeniceApiService.kt  VeniceClientFactory.kt  VeniceModels.kt  VeniceRepository.kt  VeniceStreamingClient.kt
android/app/src/main/java/com/hexstrike/ai/ui/chat/: ChatScreen.kt  ChatViewModel.kt  MarkdownText.kt  UiMessage.kt
android/app/src/main/java/com/hexstrike/ai/ui/onboarding/: OnboardingScreen.kt
android/app/src/main/java/com/hexstrike/ai/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/java/com/hexstrike/ai/ui/terminal/: TerminalScreen.kt  TerminalViewModel.kt
android/app/src/main/java/com/hexstrike/ai/ui/theme/: Theme.kt
android/app/src/main/java/com/vulnrbot/app/: MainActivity.kt  VulnrBotApplication.kt
android/app/src/main/java/com/vulnrbot/app/data/agent/: AgentEvent.kt  AgentOrchestrator.kt  PromptToolCallParser.kt  SystemPrompt.kt
android/app/src/main/java/com/vulnrbot/app/data/db/: ChatDao.kt  ChatEntities.kt  ChatHistoryRepository.kt  ChatMapping.kt  VulnrBotDatabase.kt
android/app/src/main/java/com/vulnrbot/app/data/linux/: ChrootManager.kt  LinuxEnvironmentPaths.kt  LinuxEnvironmentRepository.kt  LinuxEnvironmentState.kt  LinuxInteractiveSession.kt  LinuxSessionService.kt  LinuxShell.kt  ProotManager.kt  RootfsDownloader.kt
android/app/src/main/java/com/vulnrbot/app/data/settings/: AppSettings.kt  SettingsRepository.kt
android/app/src/main/java/com/vulnrbot/app/data/tools/: BinaryForensicsTools.kt  CloudTools.kt  ExploitationTools.kt  NetworkTools.kt  OsintTools.kt  PasswordAuthTools.kt  SecurityToolRegistry.kt  ToolExecutor.kt  ToolTypes.kt  (+2 more)
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/gradle/: libs.versions.toml
android/native/: CMakeLists.txt  README.md  stub.c
android/scripts/: fetch-proot.sh
(+16 files in other folders)
